--- a/index.html
+++ b/index.html
@@ -15,27 +15,27 @@
             background-color: #fce4ec;
             font-family: 'Arial', sans-serif;
             text-align: center;
-            overflow: hidden; /* Büyüme sırasında kaydırma çubuğu çıkmasın */
+            overflow: hidden;
         }
         .container {
             max-width: 600px;
             padding: 20px;
         }
         #resim-alani img {
-            width: 250px;
-            border: 5px solid white;
-            border-radius: 15px;
-            box-shadow: 0 8px 15px rgba(0,0,0,0.2);
-            transition: transform 0.3s ease;
+            width: 280px;
+            border: 6px solid white;
+            border-radius: 20px;
+            box-shadow: 0 10px 25px rgba(0,0,0,0.25);
+            transition: transform 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
         }
-        h1 { color: #d81b60; margin-bottom: 30px; font-size: 28px; }
+        h1 { color: #d81b60; margin-bottom: 20px; font-size: 26px; }
         .buton-grubu {
             display: flex;
             gap: 20px;
             justify-content: center;
             align-items: center;
-            flex-wrap: wrap;
-            margin-top: 20px;
+            margin-top: 30px;
+            position: relative;
         }
         button {
             padding: 15px 25px;
@@ -43,38 +43,5 @@
             font-weight: bold;
             cursor: pointer;
             border: none;
-            border-radius: 10px;
+            border-radius: 12px;
             transition: all 0.2s ease;
-            box-shadow: 0 4px 10px rgba(0,0,0,0.2);
-        }
-        #melih-btn { background-color: #2196f3; color: white; }
-        #sude-btn { background-color: #f48fb1; color: white; }
-        #mesaj {
-            margin-top: 40px;
-            font-size: 22px;
-            color: #880e4f;
-            font-weight: bold;
-            min-height: 30px;
-        }
-    </style>
-</head>
-<body>
-
-    <div class="container">
-        <div id="resim-alani">
-            <img id="ana-resim" src="resim.jpg" alt="Sudiş ve Melihkuş">
-        </div>
-
-        <h1 id="soru">Sence kim daha çok seviyor?</h1>
-
-        <div class="buton-grubu">
-            <button id="melih-btn" onclick="melihBuyut()">Melih daha çok seviyor</button>
-            <button id="sude-btn" onclick="sudeTiklandi()">Sude daha çok seviyor</button>
-        </div>
-
-        <div id="mesaj"></div>
-    </div>
-
-    <script src="script.js"></script>
-</body>
-</html>
